# gpt-context-creator

./: .gitignore  README.md  context.txt  file_iterator.py  files.csv  ignore.csv  main.py  pyproject.toml
